--- a/portfolio.html
+++ b/portfolio.html
@@ -1,124 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
+  </head>
 
+  <body>
+    <!--Основная навигация-->
     <header>
-        <nav>
-            <a href="./index.html">
-                <p>WebStudio</p>
-            </a>
-            <ul>
-            <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </nav>    
+      <nav class="navigation">
+        <a href="./index.html">
+          <p class="logo-navigation"> <span class="logo-part">Web</span> Studio</p>
+        </a>
+        <ul class="link">
+          <li><a class="header-link" href="./index.html">Cтудия</a></li>
+          <li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="header-link" href="">Контакты</a></li>
+        </ul>
+        <ul class="contacte-header">
+          <li><a class="contacte-header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contacte-header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
+      <!--Фильтрация-->
+      <section class="filter">
+        <h2 hidden>Фильтр по странице</h2>
+        <button class="filter-button">Все</button>
+        <button class="filter-button">Веб-сайты</button>
+        <button class="filter-button">Приложения</button>
+        <button class="filter-button">Дизайн</button>
+        <button class="filter-button">Маркетинг</button>
+      </section>
 
-        <nav>
-            <ul>
-                <li>
-                    <a href=""></a>
-                    <p>Все</p>
-                </li>
-                <li>
-                    <a href=""></a>
-                    <p>Веб-сайты</p>
-                </li>
-                <li>
-                    <a href=""></a>
-                    <p>Приложения</p>
-                </li>
-                <li>
-                    <a href=""></a>
-                    <p>Дизайн</p>
-                </li>
-                <li>
-                    <a href=""></a>
-                    <p>Маркетинг</p>
-                </li>
-            </ul>
-        </nav>
-
-        <section>
-            <h1 hidden>Эффективные решения для вашего бизнеса</h1>
-           <ul>
-               <li>
-                   <img src="./images/Portfolio/img1.jpg" alt="">
-                   <h2>Технокряк</h2>
-                   <a href="">Веб-сайт</a>
-               </li>
-               <li>
-                <img src="./images/Portfolio/img2.jpg" alt="">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <a href="">Дизайн</a>
-            </li>
-            <li>
-                <img src="./images/Portfolio/img3.jpg" alt="">
-                <h2>Ресторан Seafood</h2>
-                <a href="">Приложение</a>
-            </li>
-            <li>
-                <img src="./images/Portfolio/img4.jpg" alt="">
-                <h2>Проект Prime</h2>
-                <a href="">Маркетинг</a>
-            </li>
-            <li>
-                <img src="./images/Portfolio/img5.jpg" alt="">
-                <h2>Проект Boxes</h2>
-                <a href="">Приложение</a>
-            </li>
-            <li>
-                <img src="./images/Portfolio/img6.jpg" alt="">
-                <h2>Inspiration has no Borders</h2>
-                <a href="">Веб-сайт</a>
-            </li>
-            <li>
-                <img src="./images/Portfolio/img7.jpg" alt="">
-                <h2>Издание Limited Edition</h2>
-                <a href="">Дизайн</a>
-            </li>
-            <li>
-                <img src="./images/Portfolio/img8.jpg" alt="">
-                <h2>Проект LAB</h2>
-                <a href="">Маркетинг</a>
-            </li>
-            <li>
-                <img src="./images/Portfolio/img9.jpg" alt="">
-                <h2>Growing Business</h2>
-                <a href="">Приложение</a>
-            </li>
-           </ul>
-        </section>
+      <!--Примеры проектов-->
+      <section class="work-examples">
+        <h2 hidden>Эффективные решения для вашего бизнеса</h2>
+        <ul>
+          <li>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img1.jpg" alt="" /></a>
+            <a href=""><h2 class="work-examples-title">Технокряк</h2></a>
+            <a href=""><p class="work-examples-link">Веб-сайт</p></a>
+          </li>
+          <li>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img2.jpg" alt="" /></a>
+            <a href=""><h2 class="work-examples-title">Постер New Orlean vs Golden Star</h2></a>
+            <a href=""><p class="work-examples-link">Дизайн</p></a>
+          </li>
+          <li>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img3.jpg" alt="" /></a>
+            <a href=""><h2 class="work-examples-title">Ресторан Seafood</h2></a>
+            <a href=""><p class="work-examples-link">Приложение</p></a>
+          </li>
+          <li>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img4.jpg" alt="" /></a>
+            <a href=""><h2 class="work-examples-title">Проект Prime</h2></a>
+            <a href=""><p class="work-examples-link">Маркетинг</p></a>
+          </li>
+          <li>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img5.jpg" alt="" /></a>
+            <a href=""><h2 class="work-examples-title">Проект Boxes</h2></a>
+            <a href=""><p class="work-examples-link">Приложение</p></a>
+          </li>
+          <li>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img6.jpg" alt="" /></a>
+            <a href=""><h2 class="work-examples-title">Inspiration has no Borders</h2></a>
+            <a href=""><p class="work-examples-link">Веб-сайт</p></a>
+          </li>
+          <li>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img7.jpg" alt="" /></a>
+            <a href=""><h2 class="work-examples-title">Издание Limited Edition</h2></a>
+            <a href=""><p class="work-examples-link">Дизайн</p></a>
+          </li>
+          <li>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img8.jpg" alt="" /></a>
+            <a href=""><h2 class="work-examples-title">Проект LAB</h2></a>
+            <a href=""><p class="work-examples-link">Маркетинг</p></a>
+          </li>
+          <li>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img9.jpg" alt="" /></a>
+            <a href=""><h2 class="work-examples-title">Growing Business</h2></a>
+            <a href=""><p class="work-examples-link">Приложение</p></a>
+          </li>
+        </ul>
+      </section>
     </main>
 
-    <footer>
-        <a href="./index.html">
-            <p>WebStudio</p>
-        </a>
-            <div>
-                <address>г. Киев, пр-т Леси Украинки, 26</address>
-                <ul>
-                    <li>
-                        <a href="mailto:info@example.com">info@example.com</a>
-                    </li>
-                    <li>
-                        <a href="tel:+380991111111">+38 099 111 11 11</a>
-                    </li>
-                </ul>
-            </div>
+    <!--Подвал-->
+    <footer class="footer">
+      <a href="./index.html">
+        <p class="logo-footer"> <span class="logo-part">Web</span> Studio</p>
+      </a>
+      <div>
+        <address class="address-footer">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul>
+          <li>
+            <a class="contacte-footer-link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a class="contacte-footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </footer>
-    
-</body>
+  </body>
+
 </html>
