--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +13,11 @@
 <!--основная навигация по сайту-->
     <header>
         <nav class="navigation">
-            <a href="./index.html">
-                <p class="logo-navigation"> <span class="logo-part">Web</span> Studio</p>
-            </a>
+            <span class="logo">
+                <a href="./index.html">
+                <p> <span class="logo-part">Web</span><span class="logo-navigation">Studio</span></p>
+                </a>
+            </span>
             <ul class="link">
             <li><a class="header-link" href="./index.html">Студия</a></li>
             <li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
@@ -63,13 +65,13 @@
             <h2 class="section-header">Чем мы занимаемся</h2>
             <ul>
                  <li class="block-company-gallery">
-                     <img src="./images/index/img1.jpg" alt="">
+                    <img src="./images/index/img1.jpg" width="400" alt="">
                 </li>
                 <li class="block-company-gallery">
-                    <img src="./images/index/img2.jpg" alt="">
+                    <img src="./images/index/img2.jpg" width="400" alt="">
                 </li>
                 <li class="block-company-gallery">
-                    <img src="./images/index/img3.jpg" alt="">
+                    <img src="./images/index/img3.jpg" width="400" alt="">
                 </li>
             </ul>
         </section>
@@ -103,7 +105,7 @@
 <!--Подвал-->
     <footer class="footer">
         <a href="./index.html">
-            <p class="logo-footer"> <span class="logo-part">Web</span> Studio</p>
+            <p> <span class="logo-part">Web</span><span class="logo-footer">Studio</span></p>
         </a>
             <div>
                 <address class="address-footer">г. Киев, пр-т Леси Украинки, 26</address>
