--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +14,7 @@
     <header>
       <nav class="navigation">
         <a href="./index.html">
-          <p class="logo-navigation"> <span class="logo-part">Web</span> Studio</p>
+          <p> <span class="logo-part">Web</span><span class="logo-navigation">Studio</span></p>
         </a>
         <ul class="link">
           <li><a class="header-link" href="./index.html">Cтудия</a></li>
@@ -32,11 +32,13 @@
       <!--Фильтрация-->
       <section class="filter">
         <h2 hidden>Фильтр по странице</h2>
-        <button class="filter-button">Все</button>
-        <button class="filter-button">Веб-сайты</button>
-        <button class="filter-button">Приложения</button>
-        <button class="filter-button">Дизайн</button>
-        <button class="filter-button">Маркетинг</button>
+        <ul>
+          <li><button class="filter-button">Все</button></li>
+          <li><button class="filter-button">Веб-сайты</button></li>
+          <li><button class="filter-button">Приложения</button></li>
+          <li><button class="filter-button">Дизайн</button></li>
+          <li><button class="filter-button">Маркетинг</button></li>
+        </ul>
       </section>
 
       <!--Примеры проектов-->
@@ -44,49 +46,58 @@
         <h2 hidden>Эффективные решения для вашего бизнеса</h2>
         <ul>
           <li>
-            <a href=""><img class="work-examples-image" src="./images/Portfolio/img1.jpg" alt="" /></a>
-            <a href=""><h2 class="work-examples-title">Технокряк</h2></a>
-            <a href=""><p class="work-examples-link">Веб-сайт</p></a>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img1.jpg" width="400" alt="" />
+              <h2 class="work-examples-title">Технокряк</h2>
+              <p class="work-examples-link">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <a href=""><img class="work-examples-image" src="./images/Portfolio/img2.jpg" alt="" /></a>
-            <a href=""><h2 class="work-examples-title">Постер New Orlean vs Golden Star</h2></a>
-            <a href=""><p class="work-examples-link">Дизайн</p></a>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img2.jpg" width="400" alt="" />
+              <h2 class="work-examples-title">Постер New Orlean vs Golden Star</h2>
+              <p class="work-examples-link">Дизайн</p>
+            </a>
           </li>
           <li>
-            <a href=""><img class="work-examples-image" src="./images/Portfolio/img3.jpg" alt="" /></a>
-            <a href=""><h2 class="work-examples-title">Ресторан Seafood</h2></a>
-            <a href=""><p class="work-examples-link">Приложение</p></a>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img3.jpg" width="400" alt="" />
+              <h2 class="work-examples-title">Ресторан Seafood</h2>
+              <p class="work-examples-link">Приложение</p>
+            </a>
           </li>
           <li>
-            <a href=""><img class="work-examples-image" src="./images/Portfolio/img4.jpg" alt="" /></a>
-            <a href=""><h2 class="work-examples-title">Проект Prime</h2></a>
-            <a href=""><p class="work-examples-link">Маркетинг</p></a>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img4.jpg" width="400" alt="" />
+              <h2 class="work-examples-title">Проект Prime</h2>
+              <p class="work-examples-link">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <a href=""><img class="work-examples-image" src="./images/Portfolio/img5.jpg" alt="" /></a>
-            <a href=""><h2 class="work-examples-title">Проект Boxes</h2></a>
-            <a href=""><p class="work-examples-link">Приложение</p></a>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img5.jpg" width="400" alt="" />
+              <h2 class="work-examples-title">Проект Boxes</h2>
+              <p class="work-examples-link">Приложение</p>
+            </a>
           </li>
           <li>
-            <a href=""><img class="work-examples-image" src="./images/Portfolio/img6.jpg" alt="" /></a>
-            <a href=""><h2 class="work-examples-title">Inspiration has no Borders</h2></a>
-            <a href=""><p class="work-examples-link">Веб-сайт</p></a>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img6.jpg" width="400" alt="" />
+              <h2 class="work-examples-title">Inspiration has no Borders</h2>
+              <p class="work-examples-link">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <a href=""><img class="work-examples-image" src="./images/Portfolio/img7.jpg" alt="" /></a>
-            <a href=""><h2 class="work-examples-title">Издание Limited Edition</h2></a>
-            <a href=""><p class="work-examples-link">Дизайн</p></a>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img7.jpg" width="400" alt="" />
+              <h2 class="work-examples-title">Издание Limited Edition</h2>
+              <p class="work-examples-link">Дизайн</p>
+            </a>
           </li>
           <li>
-            <a href=""><img class="work-examples-image" src="./images/Portfolio/img8.jpg" alt="" /></a>
-            <a href=""><h2 class="work-examples-title">Проект LAB</h2></a>
-            <a href=""><p class="work-examples-link">Маркетинг</p></a>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img8.jpg" width="400" alt="" />
+              <h2 class="work-examples-title">Проект LAB</h2>
+              <p class="work-examples-link">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <a href=""><img class="work-examples-image" src="./images/Portfolio/img9.jpg" alt="" /></a>
-            <a href=""><h2 class="work-examples-title">Growing Business</h2></a>
-            <a href=""><p class="work-examples-link">Приложение</p></a>
+            <a href=""><img class="work-examples-image" src="./images/Portfolio/img9.jpg" width="400" alt="" />
+              <h2 class="work-examples-title">Growing Business</h2>
+              <p class="work-examples-link">Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
@@ -95,7 +106,7 @@
     <!--Подвал-->
     <footer class="footer">
       <a href="./index.html">
-        <p class="logo-footer"> <span class="logo-part">Web</span> Studio</p>
+        <p> <span class="logo-part">Web</span><span class="logo-footer">Studio</span></p>
       </a>
       <div>
         <address class="address-footer">г. Киев, пр-т Леси Украинки, 26</address>
