--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navigation">
             <span class="logo">
                 <a href="./index.html">
-                <p> <span class="logo-part">Web</span><span class="logo-navigation">Studio</span></p>
+                <span class="logo-part">Web</span><span class="logo-navigation">Studio</span>
                 </a>
             </span>
             <ul class="link">
@@ -105,7 +105,7 @@
 <!--Подвал-->
     <footer class="footer">
         <a href="./index.html">
-            <p> <span class="logo-part">Web</span><span class="logo-footer">Studio</span></p>
+            <span class="logo-part">Web</span><span class="logo-footer">Studio</span>
         </a>
             <div>
                 <address class="address-footer">г. Киев, пр-т Леси Украинки, 26</address>
