--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
     <!--Подвал-->
     <footer class="footer">
       <a href="./index.html">
-        <p> <span class="logo-part">Web</span><span class="logo-footer">Studio</span></p>
+        <span class="logo-part">Web</span><span class="logo-footer">Studio</span>
       </a>
       <div>
         <address class="address-footer">г. Киев, пр-т Леси Украинки, 26</address>
